--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Catana</title>
     <link rel="stylesheet" href="./assets/sass/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -17,11 +17,11 @@
     <header class="w-100 h-auto">
       <div class="container-fluid h-100">
         <div class="row h-100 d-flex align-items-center">
-          <div class="col-6 col-md-5">
+          <div class="col-7 col-md-5">
             <img src="./assets/img/logo.png" width="190" class="ms-3" alt="" />
           </div>
 
-          <div class="col-6 col-md-6 d-flex justify-content-center">
+          <div class="col-5 col-md-6 d-flex justify-content-center">
             <nav class="navbar navbar-expand-lg d-flex justify-content-center">
               <button
                 class="navbar-toggler"
@@ -158,8 +158,8 @@
               >SHOP NOW <span><i class="fa-solid fa-right-long"></i></span
             ></a>
           </div>
-          <div class="col-12 col-sm-12 col-md-5">
-            <img src="./assets/img/slide6_01.jpg" class="" alt="" />
+          <div class="col-12 col-md-5">
+            <img src="./assets/img/slide6_01.jpg" class="img-fluid" alt="" />
           </div>
           <div class="col-12 col-sm-12 d-none col-md-1 d-md-flex flex-column justify-content-start align-items-center">
             <span title="Your shopping cart is empty" class="position-relative"
@@ -181,7 +181,7 @@
     <section class="section-a w-100 h-auto">
       <div class="container">
         <div class="row d-flex justify-content-between">
-          <div class="col-12 col-sm-12 col-md-5 mb-5">
+          <div class="col-12 col-md-5 mb-5">
             <div class="image overflow-hidden">
               <img
                 src="./assets/img/fashion_banner_01.jpg"
@@ -198,9 +198,7 @@
               </div>
             </div>
           </div>
-          <div
-            class="col-12 col-sm-12 col-md-5 bg-light d-flex justify-content-center"
-          >
+          <div class="col-12 col-md-5 bg-light d-flex justify-content-center">
             <div class="d-flex flex-column justify-content-center">
               <h4 class="fs-2">CELEBRATE</h4>
               <h2 class="display-3 mb-5">New season</h2>
@@ -211,7 +209,7 @@
           </div>
         </div>
         <div class="row g-3 d-flex justify-content-between">
-          <div class="col-sm-12 col-md-6 mt-5 ms-0 ms-lg-5">
+          <div class="col-sm-12 col-md-6 mt-5 ms-0 ms-lg-5 d-flex justify-content-center align-items-center">
             <div class="image2 overflow-hidden">
               <img
                 src="./assets/img/fashion_banner_02.jpg"
@@ -247,12 +245,12 @@
     </section>
 
     <section class="section-b my-5 w-100 h-auto">
-      <div class="text-center mb-5">
+      <div class="text-center d-flex justify-content-center align-items-center mb-5">
         <h2>Trending Now</h2>
       </div>
       <div class="container-fluid my-5 ">
         <div class="row g-5 d-flex justify-content-around">
-          <div class="col-12 col-sm-12 col-md-3 img-1 mb-5">
+          <div class="col-12 col-sm-12 col-md-3 d-flex align-items-center flex-column img-1 mb-5">
             <img
               src="./assets/img/photo.jpg"
               width="306"
@@ -271,7 +269,7 @@
               <span>$299.00</span>
             </div>
           </div>
-          <div class="col-12 col-sm-12 col-md-3 img-2 mb-5">
+          <div class="col-12 col-sm-12 col-md-3 img-2 d-flex align-items-center flex-column  mb-5">
             <img
               src="./assets/img/11_1-580x748.jpg"
               width="306"
@@ -292,7 +290,7 @@
               <span>$47.00</span>
             </div>
           </div>
-          <div class="col-12 col-sm-12 col-md-3 img-3 mb-5">
+          <div class="col-12 col-sm-12 col-md-3 d-flex align-items-center flex-column img-3 mb-5">
             <img
               src="./assets/img/16_1-580x748.jpg"
               width="306"
@@ -313,7 +311,7 @@
               <span><del class="text-secondary">$400</del> $349.00</span>
             </div>
           </div>
-          <div class="col-12 col-sm-12 col-md-3 mb-5 img-4">
+          <div class="col-12 col-sm-12 col-md-3 d-flex align-items-center flex-column mb-5 img-4">
             <img
               src="./assets/img/1_1-580x748.jpg"
               width="306"
@@ -342,11 +340,11 @@
       <div class="container">
         <div class="row">
           <div
-            class="col-12 col-sm-12 col-md-6 mt-5 bg-light position-relative d-flex justify-content-center"
+            class="col-12 col-sm-12 col-md-6 mt-5 bg-light d-flex justify-content-center"
           >
-            <div class="pt-5 pt-md-0 d-flex flex-column justify-content-center">
-              <span class="fw-semibold display-6">OUR</span>
-              <h2 class="display-4 fw-normal mb-3">Story</h2>
+            <div class="pt-5 pt-md-0 d-flex flex-column justify-content-center align-items-start">
+              
+              <h2 class="display-4 fw-normal mb-3"><span class="fw-semibold display-6">OUR</span> <br> Story</h2>
               <p class="mt-5">
                 Though mantras make obvious sense for big-picture dilemmas and
                 life-changing moments, their usefulness far exceeds this
@@ -377,7 +375,7 @@
     </section>
 
     <section class="choice w-100 h-auto">
-      <div class="text-center my-5">
+      <div class="text-center d-flex justify-content-center align-items-center my-5">
         <h2 class="display-6 fw-normal">Our Stylist Choice</h2>
       </div>
       <div class="container">
@@ -573,7 +571,7 @@
     </section>
 
     <section class="instagram h-auto w-100 my-5">
-      <div class="text mb-5">
+      <div class="text d-flex justify-content-center align-items-center mb-5">
         <h2 class="text-center fw-normal display-6">Instagram Pick</h2>
       </div>
       <div class="container-fluid w-100">
